# mise-en-prod-3A

./: .gitignore  .nojekyll  Dockerfile  README.md  _quarto.yml  index.html  index.qmd  main.py  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: prod.yml  test.yaml  website.yaml
app/: api.py  run.sh
deployment/: deployment.yaml  ingress.yaml  service.yaml
kubernetes/: deployment.yaml  ingress.yaml
models/: adaboost.joblib  logistic_regression.joblib  xgboost.joblib
notebooks/: notebookincendies.html  notebookincendies.ipynb  visualisation_incendies.html
src/: data_prep.py  get_data.py  train.py
