[project]
name = "mise-en-prod-3a"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=1.4.4",
    "fastapi>=0.128.8",
    "joblib>=1.5.3",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "pylint>=3.3.9",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "ruff>=0.15.10",
    "s3fs>=2025.10.0",
    "scikit-learn>=1.6.1",
    "skops>=0.13.0",
    "uvicorn>=0.39.0",
    "xgboost>=2.1.4",
]
